--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,27 @@
 .App {
   text-align: center;
-}
-
-.App-header {
-  background-color: #282c34;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(243, 241, 239, 0.2);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #404040;
+  padding: 2rem;
+}
+
+.header-title {
+  color: #00a6b1;
+  display: inline;
+}
+
+.img-wmatalogo {
+  width: 50px;
+  margin-right: 20px;
+}
+
+input,
+select {
+  font-size: 15px;
 }
